--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -94,19 +94,32 @@
     </div>
 {{else}}
     <!--<div id="trigger" class="spacer s0" style="position:fixed;top:500px">C</div>-->
-    <div id="uniteAFacebook"  class="" style="position:absolute;top:1000px;right:40px">
-        <div class="">
+<!--<div id="content-wrapper" style="position: absolute;-->
+    <!--height: 200vh;-->
+    <!--width: 100vw;-->
+    <!--">-->
+    <!--<script type="text/javascript" src="../../js/lib/iscroll-probe.js"></script>-->
+
+    <!--<div id="example-wrapper" class="scrollContainer" style="pointer-events: none;position:relative;height:200vh;">-->
+    <!--<div class="scrollContent" style="height:auto;position:relative; width:100vw;">-->
+        <!--<div style="position:relative;width:100vw;height:auto">-->
+        <div data-300="margin-top:0px" data-1500="margin-top:1000px" id="uniteAFacebook"  class="" style="top:1000px;position:absolute;right:40px">
+           <div class="">
             <h1>
                 <span  class="" style="font-family: Tahoma, Verdana, Segoe, sans-serif;font-size: 70px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px; color:white;"  >UNITE A</span>
             </h1>
         </div>
-        <div class="">
+        <div class="" style="pointer-events: none;">
             <h1>
                 <span  class="" style=" font-family: Tahoma, Verdana, Segoe, sans-serif;font-size: 110px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px;color:white;">FACEBOOK</span>
             </h1>
             <br>
         </div>
-    </div>
+        </div>
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 {{/if}}
 
     <div class="bottom-menu {{expandedMenuClass}}">
@@ -150,7 +163,7 @@
             {{/each}}
         </div>
 
-        <div id="background-lineaDelTiempo" style="position:absolute;top:2000px; min-width: 100vw;" >
+        <div id="background-lineaDelTiempo" style="position:absolute;top:2000px;min-width: 100vw;" >
             <div class="" style="background-position:center top;
     background-image:url('letras_lineadetiempo.png');
     background-repeat: no-repeat;
