--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -47,8 +47,8 @@
     </div>
 {{else}}
         <div class="tipita" style="position:absolute">
-            <div class="rotation-slow layer-letras-tipita2" style="position:absolute"> </div>
-            <div  class="rotation-very-slow layer-letras-tipita" style="position:absolute"> </div>
+            <div class="rotation-slow layer-letras-tipita2" style="position:absolute;margin-right:5px"> </div>
+            <div  class="rotation-very-slow layer-letras-tipita" style="position:absolute;margin-right:5px"> </div>
             <div class="layer-tipita" style="position:absolute"> </div>
             <div  class="layer-satie" style="position:absolute">
                 <span class="{{satie}}"  style="position:absolute">S</span>
@@ -103,7 +103,7 @@
     <!--<div id="example-wrapper" class="scrollContainer" style="pointer-events: none;position:relative;height:200vh;">-->
     <!--<div class="scrollContent" style="height:auto;position:relative; width:100vw;">-->
         <!--<div style="position:relative;width:100vw;height:auto">-->
-        <div data-300="margin-top:0px" data-1500="margin-top:1000px" id="uniteAFacebook"  class="" style="top:1000px;position:absolute;right:40px">
+        <div data-300="margin-top:0px" data-1500="margin-top:1000px" data-end="margin-top:1000px" id="uniteAFacebook"  class="" style="top:1000px;position:absolute;right:40px">
            <div class="">
             <h1>
                 <span  class="" style="font-family: Tahoma, Verdana, Segoe, sans-serif;font-size: 70px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px; color:white;"  >UNITE A</span>
@@ -147,8 +147,10 @@
         </div>
 
         <div data-2900="top:100%" data-3400="top:0" class="background-linea-tiempo">
-            <div class="rotation-very-slow layer-linea-del-tiempo"></div>
+            <!--<div class="rotation-very-slow layer-linea-del-tiempo"></div>-->
             <div class="rotation-slow layer-linea-del-tiempo2"></div>
+            <div class="layer-linea-del-tiempo"></div>
+            <!--<div class="layer-linea-del-tiempo2"></div>-->
         </div>
 
     </div>
