--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>clubdelectura</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 </head>
 
