--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -162,17 +162,10 @@
             <!--{{/each}}-->
         <!--</div>-->
 
-            <div style="max-width:1024px;margin:0 auto;height:{{getheight}}vh">
+            <div style="max-width:1024px;margin:0 auto;height:auto">
                 {{#each actividades}}
                     {{>actividadItem}}
-                <!--<div class="row">-->
-                    <!--<div class="col-md-7" style="height:550px;padding:0">-->
-                    <!--<div style="background-image:url('dragon_definitivo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>-->
-                <!--</div>-->
-                    <!--<div class="col-md-5" style="background-color:mediumpurple;height:550px;padding:0">-->
-                        <!--<div style="background-color:orange;width:100%;height:400px"></div>-->
-                    <!--</div>-->
-                <!--</div>-->
+
                 {{/each}}
                 <div data-2900="top:100%" data-3400="top:0%" class="background-linea-tiempo" style="z-index:-1;width:1024px;" >
                     <!--<div class="rotation-very-slow layer-linea-del-tiempo"></div>-->
