--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -228,7 +228,7 @@
         <!--<i class="navigation-button navigation-top fa fa-circle fa-4x" aria-hidden="true" ></i>-->
         <i class="navigation-button navigation-down  navigation-button-3 fa fa-circle fa-3x" aria-hidden="true" style="position:absolute;left:0;top:50px;"></i>
         <i class="navigation-button navigation-button-4 navigation-down fa fa-circle" aria-hidden="true" style="font-size:2em;position:absolute;left:0;top:90px;opacity:0.7"></i>
-        <i class="navigation-button navigation-button-5 navigation-down fa fa-circle fa-1x" aria-hidden="true" style="position:absolute;left:0;top:120px;opacity:0.4"></i>
+        <i class="navigation-button navigation-button-5 navigation-down-max fa fa-circle fa-1x" aria-hidden="true" style="position:absolute;left:0;top:120px;opacity:0.4"></i>
         <i class="navigation-button navigation-button-6 fa fa-circle fa-1x" aria-hidden="true" style="position:absolute;left:0;top:150px;opacity:0"></i>
         </div>
     </div>
