--- a/imports/ui/users/actividadItem.html
+++ b/imports/ui/users/actividadItem.html
@@ -71,6 +71,21 @@
     <!--</div>-->
     <div class="row" style="margin:0;z-index:1">
         {{> Template.dynamic template=getDibujo}}
-        <!--{{> teconmedialunas}}-->
+        <!--{{> dragon}}-->
+        {{#if isDesktop}}
+        {{else}}
+        <div class="" style="width:100%;height:50vh;margin-top:30vh" >
+            <!--<div class="" style="min-height:inherit;z-index:-1;height:0%;position:inherit;max-width:1024px;background-size:contain"></div>-->
+            <!--<div class="layer-linea-del-tiempo" style="min-height:inherit;position:inherit;z-index:-1;position:inherit;max-width:1024px;background-size:contain;margin-top:-100vh"></div>-->
+            <div style=" background-position:center top;
+    background-image:url('letras_lineadetiempo2.png');
+    background-repeat: no-repeat;background-size:contain;
+    width:100vw;height:50vh"></div>
+            <div style=" background-position:center top;
+    background-image:url('letras_lineadetiempo.png');
+    background-repeat: no-repeat;background-size:contain;
+    width:100vw;height:50vh;margin-top:-50vh"></div>
+        </div>
+{{/if}}
     </div>
 </template>
