--- a/imports/ui/users/templatesImages/quiroga.html
+++ b/imports/ui/users/templatesImages/quiroga.html
@@ -1,7 +1,9 @@
 <template name="quiroga">
     <!--<div class="mobile-margin-top mobile-no-left" style="z-index:-1;background-position:center left;background-image:url('quiroga1.png'); left:50px;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>-->
     <!--<div class="mobile-margin-top mobile-no-left" style="z-index:-1;background-position:center left;background-image:url('quiroga.png'); left:50px;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>-->
-    {{#if esPar}}
+    {{#if isDesktop}}
+
+{{#if esPar}}
         <div class="mobile-margin-top mobile-no-left rotation-very-slow2" style="z-index:-1;background-position:center left;background-image:url('quiroga2.png'); left:50px;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
     {{else}}
         <div class="mobile-margin-top mobile-no-left rotation-very-slow2" style="z-index:-1;transform: scaleX(-1);background-position:center left;background-image:url('quiroga2.png'); left:50px;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>
@@ -31,5 +33,21 @@
             <div style="background-image:url('quiroga.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
         {{/if}}
     </div>
-    <div class="col-md-12 rotation-very-slow2" style="margin-top:-400px;background-image:url('plumas.png');background-size:contain;height:400px"></div>
+        <div class="col-md-12 rotation-very-slow2" style="margin-top:50px;background-image:url('plumas.png');background-size:contain;height:400px"></div>
+
+    {{else}}
+
+        <div class="col-sm-8 col-sm-offset-2" style="margin-top:400px">
+            <div style="width:100%;padding-right:60px">
+                <div style="width:100%;max-height:180px">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
+                <!--<div style="margin-top:25px;max-height:165px;overflow-y:hidden"><h4><p class="actividad-descripcion">{{texto}}</p></h4></div>-->
+                <!--<div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>-->
+            </div>
+
+        </div>
+        <div class="col-sm-10 col-sm-offset-1" style="height:650px;margin-top:150px;padding:0;margin-top:150px;padding-top:50px;" >
+            <div style="background-image:url('quiroga.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
+
+        </div>
+    {{/if}}
 </template>
