--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -103,19 +103,27 @@
     <!--<div id="example-wrapper" class="scrollContainer" style="pointer-events: none;position:relative;height:200vh;">-->
     <!--<div class="scrollContent" style="height:auto;position:relative; width:100vw;">-->
         <!--<div style="position:relative;width:100vw;height:auto">-->
-        <div data-300="margin-top:0px" data-1500="margin-top:1000px" data-end="margin-top:1000px" id="uniteAFacebook"  class="" style="top:1000px;position:absolute;right:40px">
+        <div  id="uniteAFacebook"  class="" style="top:1000px;position:absolute;right:40px;margin-top: 583.333px;">
            <div class="">
             <h1>
-                <span  class="" style="font-family: Tahoma, Verdana, Segoe, sans-serif;font-size: 70px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px; color:white;"  >UNITE A</span>
+                <span  class="" style="    top: -70px;
+    right: 0px;
+    position: absolute;font-family:  'Montserrat';font-size: 70px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px; color:white;"  >UNITE A</span>
             </h1>
         </div>
         <div class="" style="pointer-events: none;">
             <h1>
-                <span  class="" style=" font-family: Tahoma, Verdana, Segoe, sans-serif;font-size: 110px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px;color:white;">FACEBOOK</span>
+                <span  class="" style=" font-family:  'Montserrat';font-size: 110px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px;color:white;">FACEBOOK
+                </span>
             </h1>
             <br>
         </div>
         </div>
+    <div style="position:absolute;margin-top:2100px;margin-left:40px;margin-right:40px;">
+        <p style="text-align:center;font-family: 'Open Sans', sans-serif;
+        color:white;font-size:46px">
+            Formá parte del #Clubdelectura.uy, un grupo variopinto de lectores que se reúne mensualmente en Casa Inju a compartir su entusiasmo por la lectura. Comentan libros, conocen nuevos autores y promueven actividades que difundan el hábito de leer. ¡Unite!        </p>
+    </div>
     <!--</div>-->
     <!--</div>-->
     <!--</div>-->
@@ -179,7 +187,7 @@
 
 
     {{else}}
-    <div  id="body" style="overflow-y:hidden;overflow-x:hidden;padding-top:2000px;padding-bottom:200px;position:absolute;z-index:-1;width:100%; height:auto;background-color:#2d3e54">
+    <div  id="body" style="overflow-y:hidden;overflow-x:hidden;padding-top:3000px;padding-bottom:200px;position:absolute;z-index:-1;width:100%; height:auto;background-color:#2d3e54">
 
         <div style="max-width:1024px;margin:0 auto;height:auto;">
 
