--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -103,11 +103,11 @@
     <!--<div id="example-wrapper" class="scrollContainer" style="pointer-events: none;position:relative;height:200vh;">-->
     <!--<div class="scrollContent" style="height:auto;position:relative; width:100vw;">-->
         <!--<div style="position:relative;width:100vw;height:auto">-->
-        <div  id="uniteAFacebook"  class="" style="top:1000px;position:absolute;right:40px;margin-top: 583.333px;">
+        <div  id="uniteAFacebook"  class="" style="top:1200px;position:absolute;right:15%;margin-top: 583.333px;">
            <div class="">
             <h1>
                 <span  class="" style="    top: -70px;
-    right: 0px;
+    right: 25%;
     position: absolute;font-family:  'Montserrat';font-size: 70px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px; color:white;"  >UNITE A</span>
             </h1>
         </div>
@@ -116,14 +116,29 @@
                 <span  class="" style=" font-family:  'Montserrat';font-size: 110px;font-style: normal;font-variant: normal;font-weight: bold;line-height: 53.9px;color:white;">FACEBOOK
                 </span>
             </h1>
+
             <br>
         </div>
         </div>
-    <div style="position:absolute;margin-top:2100px;margin-left:40px;margin-right:40px;">
+    <div style="position:absolute;margin-top:1900px;margin-left:40px;margin-right:40px;">
         <p style="text-align:center;font-family: 'Open Sans', sans-serif;
         color:white;font-size:46px">
             Formá parte del #Clubdelectura.uy, un grupo variopinto de lectores que se reúne mensualmente en Casa Inju a compartir su entusiasmo por la lectura. Comentan libros, conocen nuevos autores y promueven actividades que difundan el hábito de leer. ¡Unite!        </p>
+        <div style="position:absolute;right:80px" ><button class="btn " style="background-color: white;
+    width: 100px;
+    height: 100px;
+    border-radius: 20%;
+    /*right: 25px;*/
+    /*position: absolute;*/
+    "><i class="fa fa-facebook" style="    font-size: 76px;
+    color: #2d3e54;
+
+"></i></button>
+            </div>
+
+
     </div>
+
     <!--</div>-->
     <!--</div>-->
     <!--</div>-->
