--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -44,7 +44,23 @@
         <div  class="layer-satie">
             <span class="{{satie}}">S</span>
         </div>
-    </div>
+
+            <div style="position:fixed; width:65%;margin-top:1470px;
+;margin-left:40px;margin-right:40px;right:0px">
+                <p style="text-align:right;font-family: 'Open Sans', sans-serif;
+        color:white;font-size:26px">
+                    Formá parte del #Clubdelectura.uy, un grupo variopinto de lectores que se reúne mensualmente en Casa INJU a compartir su entusiasmo por la lectura. Comentan libros, conocen nuevos autores y promueven actividades que difundan el hábito de leer. ¡Unite!        </p>
+            </div>
+
+            <div style="position:fixed;margin-top:1700px;right:40px">
+                <span style="font-family: 'Open Sans', sans-serif;
+        color:white;font-size:26px">#Clubdelectura.uy</span>
+                <button class="btn " style="background-color: white;width: 70px;height: 70px;border-radius: 20%;">
+                  <i class="fa fa-facebook" style="font-size: 76px;color: #2d3e54;font-weight:bold"></i>
+                </button>
+            </div>
+
+        </div>
 {{else}}
         <div class="tipita" style="position:absolute">
             <div class="rotation-slow layer-letras-tipita2" style="width: 95%;position:absolute;margin-right:5px"> </div>
@@ -59,7 +75,7 @@
 
 {{#if isDesktop}}
 
-        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="facebook">
+        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:35%" data-2000="display:block; top:35%" data-3000="display:block;top:35%" data-3500="display:none;top:-50%" class="facebook">
         <div class="unite-a-container">
             <h1>
 
@@ -91,7 +107,8 @@
 
         </div>
 
-    </div>
+            </div>
+
 {{else}}
     <!--<div id="trigger" class="spacer s0" style="position:fixed;top:500px">C</div>-->
 <!--<div id="content-wrapper" style="position: absolute;-->
