--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -45,14 +45,14 @@
             <span class="{{satie}}">S</span>
         </div>
 
-            <div style="position:fixed; width:65%;margin-top:1470px;
+            <div style="position:fixed; width:65%;margin-top:200vh;
 ;margin-left:40px;margin-right:40px;right:0px">
                 <p style="text-align:right;font-family: 'Open Sans', sans-serif;
         color:white;font-size:26px">
                     Formá parte del #Clubdelectura.uy, un grupo variopinto de lectores que se reúne mensualmente en Casa INJU a compartir su entusiasmo por la lectura. Comentan libros, conocen nuevos autores y promueven actividades que difundan el hábito de leer. ¡Unite!        </p>
             </div>
 
-            <div style="position:fixed;margin-top:1700px;right:40px">
+            <div style="position:fixed;margin-top:240vh;right:40px">
                 <span style="font-family: 'Open Sans', sans-serif;
         color:white;font-size:26px">#Clubdelectura.uy</span>
                 <button class="btn " style="background-color: white;width: 70px;height: 70px;border-radius: 20%;">
