--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -167,7 +167,7 @@
 
         <div data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}">
         <ul>
-           <li class="horizontal-menu-item {{isSelected "nosotros"}}" data-value="nosotros">NOSOTROS</li>
+           <a href="/nosotros"><li class="horizontal-menu-item {{isSelected "nosotros"}}" data-value="nosotros">NOSOTROS</li></a>
            <li class="horizontal-menu-item {{isSelected "facebook"}}" data-value="facebook">FACEBOOK</li>
            <li class="horizontal-menu-item {{isSelected "libros"}}" data-value="libros">LIBROS LEIDOS</li>
            <li class="horizontal-menu-item {{isSelected "reseñas"}}" data-value="reseñas">RESEÑAS</li>
@@ -178,7 +178,7 @@
 {{else}}
     <div  class="bottom-menu {{expandedMenuClass}}" style="z-index:5">
         <ul>
-            <li class="horizontal-menu-item {{isSelected "nosotros"}}" style="font-size:30px" data-value="nosotros">NOSOTROS</li>
+            <li href="/nosotros" class="horizontal-menu-item {{isSelected "nosotros"}}" style="font-size:30px" data-value="nosotros">NOSOTROS</li>
             <li class="horizontal-menu-item {{isSelected "libros"}}" style="font-size:30px" data-value="libros">LIBROS LEIDOS</li>
             <li class="horizontal-menu-item {{isSelected "reseñas"}}" style="font-size:30px" data-value="reseñas">RESEÑAS</li>
             <li class="horizontal-menu-item {{isSelected "colaboradores"}}" style="font-size:30px" data-value="colaboradores">COLABORADORES</li>
